--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>App</title>
   <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" /> -->
-  <link href="https://cdn.jsdelivr.net/npm/flowbite@3.0.0/dist/flowbite.min.css" rel="stylesheet" />
+  <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@3.0.0/dist/flowbite.min.css" rel="stylesheet" /> -->
 </head>
 
 <body>
   <div id="root"></div>
   <!-- <script src="../path/to/flowbite/dist/flowbite.min.js"></script> -->
   <!-- <script src="../path/to/flowbite/dist/flowbite.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/flowbite@3.0.0/dist/flowbite.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/flowbite@3.0.0/dist/flowbite.min.js"></script> -->
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
